--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "serve -l 3000",
     "start:watch": "npm run build && npm-run-all --parallel build:webpack:watch start",
-    "build": "npm-run-all build:webpack build:html",
+    "build": "npm-run-all build:webpack build:html build:words",
     "build:webpack": "webpack --config webpack/dev.config.js",
     "build:webpack:watch": "webpack --config webpack/dev.config.js --watch",
     "build:webpack:prod": "webpack --confi webpack/prod.config.js",
     "build:html": "mkdir -p public && cp src/client/index.html public/index.html",
+    "build:words": "node src/content/words/build",
     "clean": "rm -rf public",
     "lint": "npm-run-all lint:js lint:css",
     "lint:js": "eslint '{src,test}/**/*.{js,jsx}'",
