Utility for creating components

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint:css": "stylelint 'src/**/*.css'",
     "test": "npm-run-all lint test:all",
     "test:all": "npm-run-all test:unit",
-    "test:unit": "NODE_ENV=test jest test/unit"
+    "test:unit": "NODE_ENV=test jest test/unit",
+    "components:create": "node scripts/components/create"
   },
   "author": "",
   "license": "ISC",
