--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tagalog-learner",
+  "name": "incremental-tagalog",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
