Creating a flashcard-sets resource

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:webpack:prod": "webpack --confi webpack/prod.config.js",
     "build:html": "mkdir -p public && cp src/client/index.html public/index.html",
     "build:words": "node src/content/words/build",
+    "build:flashcard-sets": "node src/content/flashcard-sets/build",
     "clean": "rm -rf public",
     "lint": "npm-run-all lint:js lint:css",
     "lint:js": "eslint '{src,test}/**/*.{js,jsx}'",
