Prepare to push to prod

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "start": "serve -l 3000",
     "start:watch": "npm run build && npm-run-all --parallel build:webpack:watch start",
+    "ci": "npm-run-all test:unit test:behavioural build:prod",
     "build": "npm-run-all build:webpack build:html build:words build:flashcard-sets",
+    "build:prod": "npm-run-all build:webpack:prod build:html build:words build:flashcard-sets",
     "build:webpack": "webpack --config webpack/dev.config.js",
     "build:webpack:watch": "webpack --config webpack/dev.config.js --watch",
-    "build:webpack:prod": "webpack --confi webpack/prod.config.js",
+    "build:webpack:prod": "webpack --config webpack/prod.config.js",
     "build:html": "mkdir -p public && cp src/client/index.html public/index.html",
     "build:words": "node src/content/words/build",
     "build:flashcard-sets": "node src/content/flashcard-sets/build",
