Do not use npm-run-all for ci, since it is not a dependency I guess?

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "serve -l 3000",
     "start:watch": "npm run build && npm-run-all --parallel build:webpack:watch start",
-    "ci": "npm-run-all test:unit test:behaviour build:prod",
+    "ci": "npm run test:unit && npm run test:behaviour && npm run build:prod",
     "build": "npm-run-all build:webpack build:html build:words build:flashcard-sets",
     "build:prod": "npm-run-all build:webpack:prod build:html build:words build:flashcard-sets",
     "build:webpack": "webpack --config webpack/dev.config.js",
